--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0px;
   box-sizing: border-box;
@@ -22,19 +23,22 @@ body {
   justify-content: space-around;
   position: fixed;
   top: 0px;
+  height: 70px;
   width: 100%;
 }
 .header-searchbar {
   display: flex;
-  width: 314px;
-  height: 57px;
+  width: 250px;
+  height: 45px;
   border-radius: 63px;
   background: #fff;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0px 15px;
 }
 .header-searchbar > div {
   color: #9f9f9f;
+  font-size: 20px;
 }
 .header ul {
   display: flex;
@@ -43,13 +47,18 @@ body {
 }
 .header ul > li {
   margin: 0px 2rem;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
 }
 .header-title {
-  font-family: "Courier New", Courier, monospace;
-  font-size: 61.43px;
+  font-family:Delius Unicase;
+  font-size: 45px;
   font-weight: 700;
 }
-
+.header-hamburger svg{
+  width: 50px;
+}
 .dappr-container {
   width: 70%;
   height: 400px;
@@ -61,20 +70,32 @@ body {
 .dappr-container img {
   height: 400px;
   border-radius: 20px;
-  box-shadow: 3px 5px 27px 0px rgba(0, 0, 0, 0.25) inset;
-  border: 6px solid #fff;
-  background: #e5d8ff;
+  box-shadow: 0px 9px 31px 0px rgba(0, 0, 0, 0.4);
 }
 .dappr-container textarea {
   resize: none;
   height: 400px;
   width: 60%;
+  color: #6F7373;
+  font-family: DM Sans;
+  font-size: 20px;
   border-radius: 20px;
+  padding: 20px 20px;
+  line-height: 35px;
   border: 6px solid #fff;
   background: #e5d8ff;
   box-shadow: 3px 5px 27px 0px rgba(0, 0, 0, 0.25) inset;
+  outline: none;
 }
-
+.social-container{
+  width : 10px;
+  height: 50px;
+  background: pink;
+  position: sticky;
+  top: 200px;
+  left: 100%;
+  /* margin: 60px; */
+}
 .card-list {
   width: 80%;
   height: 100px;
@@ -97,6 +118,8 @@ body {
 .card-list .card ul li{
     letter-spacing: 1.16px;
     line-height: 50px;
+    font-size: 20px;
+    font-weight: 700;
 }
 .c1{
     background: #929DFF;
@@ -110,13 +133,25 @@ body {
 .c4{
     background: #000000;
 }
-
+.bot{
+  position: fixed;
+  bottom: 1%;
+  right: 12%;
+  background-color:#fff;
+  width: 100px;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  box-shadow: 0px 9px 31px 0px rgba(0, 0, 0, 0.4);
+}
 .footer-container{
     border-radius: 21px;
     width: 80%;
     height: 500px;
     background:var(--footer-clr);
-    margin:4rem auto;
+    margin:4.3rem auto;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -146,19 +181,20 @@ body {
     color: #04285A;
 }
 .footer-text-area-container .title{
-    font-size: 38px;
-    font-weight: 700;
+    font-size: 30px;
+    font-weight:700;
     letter-spacing: 3.99px;
     margin:20px 40px
 }
 .footer-text-area-container ul{
     list-style: none;
-    margin-left: 60px;
+    margin-left: 20px;
     display: flex;
     flex-direction: column;
 }
 .footer-text-area-container ul li{
-    margin: 10px 0px;
+    margin: 10px 10px;
+    font-size: 20px;
 }
 .footer-text-area-container button{
     width: 15%;
@@ -168,19 +204,24 @@ body {
     color: white;
     font-size: 20px;
     display: flex;
+    justify-content: center;
     align-items: center;
     background: #000000;
     border: none;
     height: 10%;
+}
+.footer-text-area-container button svg{
+  margin: 0 0 0 10px;
 }
 .footer-category-container{
     width: 80%;
     height: 25%;
     border: 5px solid #FFF;
     border-radius: 22px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 35px;
-    font-weight: 700;
-    line-height: 300%;
+    font-weight: 900;
     letter-spacing: 1.4px;
 }
