--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0px;
   box-sizing: border-box;
@@ -68,7 +67,7 @@ body {
   justify-content: space-between;
 }
 .dappr-container img {
-  height: 400px;
+  height: 388px;
   border-radius: 20px;
   box-shadow: 0px 9px 31px 0px rgba(0, 0, 0, 0.4);
 }
@@ -88,13 +87,17 @@ body {
   outline: none;
 }
 .social-container{
-  width : 10px;
-  height: 50px;
-  background: pink;
-  position: sticky;
+  width : 4rem;
+  /* border: 2px solid red; */
+  position: fixed;
   top: 200px;
-  left: 100%;
-  /* margin: 60px; */
+  right: 0px;
+  display: flex;
+  flex-direction: column;
+}
+.whatsapp-border{
+  border: 2px solid black;
+  border-radius: 5px;
 }
 .card-list {
   width: 80%;
